--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.1.1",
+    "@tanstack/react-query": "^5.40.0",
+    "@types/react": "^18.3.3",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.12.1",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-toastify": "^10.0.5",
+    "typescript": "^5.4.5",
+    "viem": "^2.13.1",
+    "wagmi": "^2.9.7",
+    "zksync-ethers": "^6.7.1"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
